appId: ${APP_ID}
tags:
  - contacts
name: contacts_list_opens
---
- runFlow: ../../setup/sign_in.yaml
- tapOn: "open drawer"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "^Contacts$"
    timeout: 5000
- tapOn: "^Contacts$"
- extendedWaitUntil:
    visible: "Contacts"
    timeout: 10000
- takeScreenshot: contacts_list
- back
